Fix mobile button alignment

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -71,9 +71,11 @@ body {
   }
   #next-button {
     right: 0;
+    margin-right: -0.7rem;
   }
   #prev-button {
     left: 0;
+    margin-left: -0.7rem;
   }
 }
 
@@ -105,6 +107,9 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    font-weight: bold;
+  }
   .slider-item {
     width: 530px;
   }
@@ -184,4 +189,8 @@ body {
 
 .portfolio-image {
   width: 100%;
+}
+
+.btn.disabled, .btn:disabled {
+  opacity: inherit;
 }
